manifests/forwussy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forwussy-server
  namespace: default
  labels:
    app: forwussy-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forwussy-server
  template:
    metadata:
      labels:
        app: forwussy-server
    spec:
      serviceAccountName: service-watcher
      containers:
        - name: forwussy-server
          image: evanjd711/forwussy:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 443
            - name: forwussy-certs

---
apiVersion: v1
kind: Service
metadata:
  name: forwussy-service
  namespace: default
  labels:
    app: forwussy-server
spec:
  selector:
    app: forwussy-server
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
