manifests/webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: example-forwussy
webhooks:
  - name: forwussy-validator.padugg.com 
    clientConfig:
      service:
        name: forwussy-service
        namespace: default
        path: /config
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREVENDQWZXZ0F3SUJBZ0lVUmR6Q1NzQjQvYXd0bWI0ZnIyTFJPNlNNa0w0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xabTl5ZDNWemMza3RZMkV3SGhjTk1qVXdOakF6TURNME16RXlXaGNOTXpVdwpOakF4TURNME16RXlXakFXTVJRd0VnWURWUVFEREF0bWIzSjNkWE56ZVMxallUQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNVHN2NUg2cXN3a3dZVVkwZ2JVRTI0VTVhenN6VUdnajBqeFBVY0kKQXVhcGdBRHZUUnJxMFdLcFNqUWUwSUlOckFEMEJnVlZITFdWSzZkN1IzZFZkZVMrZTZlZ2IzWjNadnlMdUUzdQpFTzJMSHo3SGdE [...]
    rules:
      - operations: ["CREATE", "DELETE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["services"]
    admissionReviewVersions: ["v1"]
    sideEffects: None
